--- a/css/homepage.css
+++ b/css/homepage.css
@@ -225,7 +225,7 @@ h5 {
   padding: 10px 0px 8px 0px;
 }
 
-button {
+button, input[type="submit"] {
   border: none;
   background-color: #08A6A1;
   padding: 15px;
@@ -440,6 +440,49 @@ header span {
 
 .about-me-info {
   margin: 20px 0px 0px 0px;
+}
+
+form input, form textarea {
+  width: 100%;
+  margin-bottom: 30px;
+   outline: none;
+}
+
+input, label {
+  display: block;
+}
+
+input[type="text"], input[type="email"] {
+  height: 50px;
+  padding-left: 10px;
+  font-family: 'Roboto', sans-serif;
+  color: #717171;
+  font-size: 16px;
+  border: 3px solid #d4d4d4;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus { 
+    background-color: #ffffe6;
+    border-color: #08A6A1;
+}
+
+input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:active {
+  background-color: #043b39;
+}
+
+textarea {
+  height: 100px;
+  padding: 10px;
+  font-family: 'Roboto', sans-serif;
+  color: #717171;
+  font-size: 16px;
+  border: 3px solid #d4d4d4;
+}
+
+label {
+  color: #08A6A1;
+  font-size: 18px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 991px) {
